거래 내역 및 코드 수정 중심의 UI 개선 및 기능 개선

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ storage/strategies/*.pine
 storage/strategies/meta_*.json
 !storage/strategies/current.pine
 !storage/strategies/example.pine
+!storage/webhooks/.gitkeep
+!storage/strategies/.gitkeep
 
 # 기타
 .DS_Store
