--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,20 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.py",
-      "use": "@vercel/python"
+      "src": "main.py",
+      "use": "@vercel/python",
+      "config": {
+        "runtime": "python3.9"
+      }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.py"
+      "dest": "/main.py"
     }
   ],
   "env": {
-    "PYTHONPATH": "./:./api"
+    "PYTHONPATH": "."
   }
 } 
