--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# 환경 설정 파일
+.env
+.env.*
+.env-*
+
 # Python 관련
 __pycache__/
 *.py[cod]
@@ -16,22 +21,53 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-.venv/
-venv/
-ENV/
 
-# .env 파일 (보안 정보 포함)
-.env
-.env.local
+# 편집기 파일
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
 
-# 로그 파일 및 임시 파일
-logs/
+# OS 파일
+.DS_Store
+Thumbs.db
+
+# 로그 파일
 *.log
-server_log.txt
-/tmp/
+logs/
+log/
+
+# 데이터 파일
+data/
+storage/
+*.db
+*.sqlite3
+
+# 임시 파일
+tmp/
+.tmp/
+temp/
+.temp/
+
+# 설정 및 캐시
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+.hypothesis/
+.cache/
+
+# 기타
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
 # 저장소 파일 (Vercel 환경에서 재생성됨)
 storage/webhooks/*
